Baby steps update

--- a/slides/01 - Baby Steps/01-Baby Steps.Rmd
+++ b/slides/01 - Baby Steps/01-Baby Steps.Rmd
@@ -9,6 +9,7 @@ output:
     widescreen: yes
     highlight: haddock
     biblio: C:/Users/huawei/OneDrive/Documenti/GitHub/CorsoRmarkdown/biblio/biblio.bib
+knit: pagedown::chrome_print
 ---
 
 ```{=html}
