--- a/slides/04 - Presentazioni/04-Presentazioni.Rmd
+++ b/slides/04 - Presentazioni/04-Presentazioni.Rmd
@@ -14,7 +14,7 @@ output:
 <style>
 .forceBreak { -webkit-column-break-after: always; break-after: column; }
 
-.myClass {font-size: 14px;}
+.myClass {font-size: 16px;}
 </style>
 
 ```{css, echo=FALSE}
@@ -42,14 +42,6 @@ pre[class] {
 .gdbar {
   height: 140px !important;
 }
-
-<!-- /* specify logo size on footer */ -->
-<!-- slides > slide:not(.nobackground):before { -->
-<!--   width: 92px; -->
-<!--   height: 70px; -->
-<!--   background-size: 85px 70px; -->
-<!-- } -->
-
 
 
 /* GENERAL SLIDES */
@@ -384,7 +376,7 @@ options = list(height = 400)
 
 - `ioslides`: <font size="3">sono quelle che vi farò vedere io, sono le slide in `html` più semplici da ottenere e che permettono un risultato accettabile con relativamente poco sforzo</font>
 - `slidify`: <font size="3">sempre in `html`, ma sono leggermente più complesse e il risultato non è carino come `ioslides`</font>
-- `beamer_presentation`: <font size="3">per ottenere `pdf`. Tuttavia, se dovete fare presentazioni un pochino più complesse (e.g., volete mettere le colonne, fare animazioni complesse ecc.) conviene usare direttamente la presentazione di LaTeX</font>
+- `beamer_presentation`: <font size="3">per ottenere `pdf`. Le vedremo nella lezione [03bis-LaTeXbis](https://ottaviae.github.io/CorsoRmarkdown/slides/03bis%20-%20LaTeX%20Bis/03bis-LaTeX-bis.pdf)</font>
 
 Advanced: 
 
@@ -463,7 +455,7 @@ output:
   
 ```
 
-Come creare il nostro `css`? Semplicemente aprendo un nuovo file `R` (`shift + control + n`) e andando a selzionare il tipo di file che vogliamo in basso a destra: 
+Come creare il nostro `css`? Semplicemente aprendo un nuovo file `R` (`shift + ctrl + n` o `shift + cmd + n` su Mac) e andando a selezionare il tipo di file che vogliamo in basso a destra: 
 
 </font>
 
@@ -471,8 +463,6 @@ Come creare il nostro `css`? Semplicemente aprendo un nuovo file `R` (`shift + c
 knitr::include_graphics("img/css.png")
 ```
 
-
-aggiungere link al css di prova
 
 
 ## `css`
@@ -511,6 +501,44 @@ slides > slide.dark {
 
 ```
 
+## `css` interno al file
+
+Si può anche evitare di avere un file `css` esterno e scrivere il codice all'interno del documento stesso: 
+
+````
+```{css, include=FALSE}`r ''`
+
+/* Cambia colore dei titoli */
+
+h2 {
+    color: red;
+}
+
+h3 {
+    color: blue;
+}
+
+[...]
+```
+````
+
+## Your turn!
+
+- Create una nuova presentazione per il vostro dataset
+
+- Scegliete come logo un'immagne che rappresenti il vostro dataset
+
+- Aggiungete una sezione e una slide con titolo
+
+- Create un nuovo file `css` e importatelo nella presentazione
+
+<div align="center">
+ADVANCED
+</div>
+
+- Aggiungete un sottotitolo 
+
+- Cambiate il colore della slide del titolo (provate con i colori in hex)
 
 # Formattazione
 
@@ -569,7 +597,7 @@ slides > slide.dark {
 <font size="5">Dimensione leggibile</font>
 </div>
 
-## Immagini {.columns-2}
+## Immagini {.columns-2 .build}
 
  
 <h4> `Markdown` </h4>
@@ -602,7 +630,7 @@ knitr::include_graphics("img/reality.jpg")
 
 </div>
 
-## Immagini
+## Immagini 
 
 Se volete mettere le immagini in un punto specifico della slide, tipo: 
 
@@ -613,6 +641,17 @@ knitr::include_graphics("img/esempioFigure.png")
 Usate questo codice all'interno del testo: 
 
     <img width="10%" height="10%" src="percorso-alla-figura/figura.png">
+
+
+## Your turn!
+
+- Una slide con una figura
+
+- Una slide con <font size="3"> testo piccolo </font> 
+
+- Aggiungete testo<span style="color:blue"> colorato</span>
+
+- Accanto al testo colorato mettere un'immagine (nel testo)
 
 
 ## Contenuti "incrementali"
@@ -658,17 +697,24 @@ e questo nel punto in cui volete passare dalla prima colonna alla seconda
 
 ## Ricapitolando 
  
-    ## Titolo della slide {.columns}
+    ## Titolo della slide {.columns-2}
     
     Testo nella prima colonna 
     
     <p class="forceBreak"></p>
     
     Testo nella seconda colonna
+    
+```{r echo = FALSE, eval = TRUE, out.width="40%"}
+knitr::include_graphics("img/colonne.png")
+```
+
+
+
 
 ## Colonne più flessibili 
 
-Usando `{.columns}` non si ha molta flessibilità $\rightarrow$ il testo viene automaticamente messo in due colonne
+Usando `{.columns-2}` non si ha molta flessibilità $\rightarrow$ il testo viene automaticamente messo in due colonne
 
 Per avere qualcosa di più flessibile, bisogna lavorare di più:
 
@@ -704,13 +750,12 @@ ADVANCED
 
 - Testo in blu nella colonna di destra
 
-- Far apparire testo e immagine della colonna di destra insieme
   
 # Codice e risultati
 
 ## Chunk 
 
-Funziona esattamente come prima: `ctrl + alt + i` apre un nuovo chunck di codice: 
+Funziona esattamente come prima: `ctrl + alt + i` apre un nuovo chunk di codice: 
 
 ````
 ```{r}`r ''`
@@ -718,7 +763,7 @@ Funziona esattamente come prima: `ctrl + alt + i` apre un nuovo chunck di codice
 ```
 ````
 
-ed eredita tutte le opzioni impostate nel setup chunk a meno che non vengano specificate altre opzioni nel chunk specifico
+ed eredita tutte le opzioni impostate nel setup chunk 
 
 
 ## Piccoli trucchi
@@ -726,7 +771,7 @@ ed eredita tutte le opzioni impostate nel setup chunk a meno che non vengano spe
 A volte si vuole mostrare molto codice o risultati molto lunghi che non stanno nella slide. Per risolvere questo "problema": 
 
 - Ridurre il font del codice
-- "Troncare" l'output di `R` in modo che rientri comodamente nella slide
+- "Troncare" l'output di `R` in modo che rientri comodamente nella slide (lo abbiamo già visto)
 - Scrollare il codice
 
 ## Ridurre il font del codice
@@ -747,20 +792,6 @@ Nel chunk di codice in cui volete ridurre il font:
 ```
 ````
 
-<!-- ```{r, echo = TRUE, eval=TRUE, class.source="myClass"} -->
-<!-- for (i in 1:nrow(cars)) { -->
-
-<!--     if (cars[i, "speed"] >= 5) { -->
-
-<!--         cars[i, "speed_cat"] = "fast" -->
-
-<!--   } else { -->
-
-<!--     cars[i, "speed_cat"] = "slow" -->
-
-<!--   } -->
-<!-- } -->
-<!-- ``` -->
 
 
 ## Fare scrollare il codice
@@ -786,12 +817,41 @@ pre[class] {
 ```
 ````
 
-Nel chunk di cui si vuole fare scrollare il codice aggiunger l'argomento: `class.output="scroll-100"` ed è fatta!
+##
+
+
+Nel chunk di cui si vuole fare scrollare il codice aggiungere l'argomento: `class.output="scroll-100"` ed è fatta!
+
+```{r echo = TRUE, eval=FALSE, class.output="scroll-100"}
+
+for(i in 1:nrow(rock)) {
+  
+  if (rock[i, "perm"] >= 6.3 & rock[i, "perm"] <= 17.1) {
+    
+    rock[i, "area"] = "A"
+    
+  } else if (rock[i, "perm"] >= 58.6 & rock[i, "perm"] <= 100) {
+    
+    rock[i, "area"] = "B"
+    
+  } else if (rock[i, "perm"] >= 119 & rock[i, "perm"] <= 142) {
+    
+    rock[i, "area"] = "C"
+    
+  } else {
+    
+    rock[i, "area"] = "D"
+    
+  }
+}
+
+```
+
 
 
 ## Troncare l'output del codice
 
-Si deve usare l'argomento `out.lines`, ma richiede un po' di lavoro di preparazione. 
+Lo abbiamo già visto per la preparazione dei file `pdf` ma ripassiamo 
 
 Nel setup chunk <font size="3">(ripreso da https://bookdown.org/yihui/rmarkdown-cookbook/hook-truncate.html)</font>: 
 
@@ -817,15 +877,14 @@ Nel chunk speicifico che si vuole troncare:
 
 ````
 ```{r out.lines=4}`''`
-cars
+rock
 ```
 ````
 
 ```{r echo = FALSE, eval=TRUE, out.lines=4}
-cars
+rock
 ```
 
-FYI: Funziona anche quando compilate i file in PDF 
 
 
 ## Grafici
@@ -833,8 +892,9 @@ FYI: Funziona anche quando compilate i file in PDF
 ````
 ```{r out.width="50%", fig.align='center'}`''`
 library(ggplot2)
-ggplot(cars, aes(x=speed, y=dist, size =dist, color =speed)) + geom_point() +
-       theme_bw() + theme(legend.position = "none")
+ggplot(rock, 
+       aes(y=peri,x=shape, color =shape, size = peri)) + geom_point() + 
+  theme_bw() + theme(legend.position = "none")
 ```
 ````
 
@@ -842,9 +902,9 @@ ggplot(cars, aes(x=speed, y=dist, size =dist, color =speed)) + geom_point() +
 
 ```{r out.width="50%", fig.align='center', eval=TRUE, echo=FALSE, message=FALSE}
 library(ggplot2)
-ggplot(cars, aes(x=speed, y=dist, size =dist, color =speed)) + geom_point() +
-       theme_bw() + theme(legend.position = "none")
-
+ggplot(rock, 
+       aes(y=peri,x=shape, color =shape, size = peri)) + geom_point() + 
+  theme_bw() + theme(legend.position = "none") 
 ```
 
 # Shiny 
@@ -871,7 +931,7 @@ Ogni shiny app ha due componenti principali:
 
 <div style="float: left; width: 50%;">
 
-`ui` (User Interface): 
+`ui` (**U**ser **I**nterface): 
 
 è il "contenitore" della app
 
@@ -895,7 +955,7 @@ Lo user non sa neanche che esiste
 
 ## Come inserirla in `RMarkdown`
 
-Aggiungete allo YAML: `runtime: shiny` e vederete che `knit` viene sostituto da `Run Presentation`
+Aggiungete allo YAML: `runtime: shiny` <font size="3"> su una nuova riga </font> e vederete che `knit` viene sostituto da `Run Presentation`
 
 
 ```{r echo = FALSE, eval=TRUE}
@@ -978,7 +1038,7 @@ options = list(height = 300)
 
 Due opzioni: 
 
-1. Aprire la presentazione `html` in un browser (for the love of God, usate Chrome) e stampate il file in PDF
+1. Aprire la presentazione `html` in un browser (Chrome) e stampate il file in PDF
 
 2. Usate `pagedown` che fa da solo l'operazione di cui sopra: 
 
@@ -987,5 +1047,11 @@ Due opzioni:
 install.packages("pagedown")
 pagedown::chrome_print("percorso-al-file-html/presentazione.html")
 ```
+
+`r emoji::emoji("sunglasses")` Like a pro: aggiungere nello YAML  su una nuova riga
+
+    knit: pagedown::chrome_print
+    
+e ottenete direttamente `html` e `pdf`
 
     
