--- a/Esempi/Tesi/tesi.tex
+++ b/Esempi/Tesi/tesi.tex
@@ -263,9 +263,9 @@ F Statistic &  & 89.57$^{***}$ (df = 1; 48) \\
 \hypertarget{le-figure-doppie}{%
 \subsection{Le figure doppie}\label{le-figure-doppie}}
 
-In figura \ref{fig:doppia} si trova un esempio di sottoofigure. In
-Figura \ref{sub:unipd1} c'è il logo unipd, in Figura \ref{sub:grafico}
-c'è un grafico.
+In figura \ref{fig:doppia} si trova un esempio di sottofigure. In Figura
+\ref{sub:unipd1} c'è il logo unipd, in Figura \ref{sub:grafico} c'è un
+grafico.
 
 \begin{figure}
 \centering
